<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:splitMotionEvents="false">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@drawable/launchbackground">

                <LinearLayout
                    android:id="@+id/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginBottom="@dimen/login_logo_margin_bottom"
                        >

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="44dp"
                        android:paddingRight="44dp">

                        <org.edx.mobile.view.custom.EdxTextInputLayout
                            android:id="@+id/usernameWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="-4dp"
                            android:paddingEnd="-4dp"
                            android:paddingLeft="-4dp"
                            android:paddingRight="-4dp"
                            android:hint="@string/email_username"
                            android:textColorHint="@color/grey_text">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/email_et"
                                android:inputType="textEmailAddress"
                                android:maxLength="100"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </org.edx.mobile.view.custom.EdxTextInputLayout>

                        <org.edx.mobile.view.custom.EdxTextInputLayout
                            android:id="@+id/passwordWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="-4dp"
                            android:paddingEnd="-4dp"
                            android:paddingLeft="-4dp"
                            android:paddingRight="-4dp"
                            android:hint="@string/password"
                            android:textColorHint="@color/grey_text">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/password_et"
                                android:layout_marginTop="8dp"
                                android:inputType="textPassword"
                                android:maxLength="100"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </org.edx.mobile.view.custom.EdxTextInputLayout>

                        <TextView
                            android:id="@+id/forgot_password_tv"
                            style="@style/semibold_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/selectable_box_overlay"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/forgot_password"
                            android:textColor="@color/text_navigation"
                            android:textSize="12sp" />

                        <FrameLayout
                            android:id="@+id/login_button_layout"
                            style="@style/edX.Widget.SignInButtonLayout"
                            android:contentDescription="@string/login_btn"
                            android:focusable="true">

                            <TextView
                                android:id="@+id/login_btn_tv"
                                style="@style/edX.Widget.SignInButton"
                                android:text="@string/login" />

                            <include
                                android:id="@+id/progress"
                                layout="@layout/button_progress_indicator" />
                        </FrameLayout>

                        <LinearLayout
                            android:id="@+id/panel_login_social"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <org.edx.mobile.view.custom.DividerWithTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/or_sign_in_with" />

                            <include
                                android:id="@+id/social_auth"
                                layout="@layout/panel_social_auth" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/by_signing_up_tv"
                            style="@style/regular_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:gravity="center"
                            android:text="@string/by_signing_up"
                            android:textColor="@color/grey_text"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/end_user_agreement_tv"
                            style="@style/regular_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/selectable_box_overlay"
                            android:focusable="true"
                            android:gravity="center"
                            android:textColor="@color/edx_brand_primary_base"
                            android:textSize="11sp"
                            tools:text="@string/licensing_agreement" />

                        <TextView
                            android:id="@+id/end_user_agreement_tv2"
                            style="@style/regular_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/selectable_box_overlay"
                            android:focusable="true"
                            android:gravity="center"
                            android:textColor="@color/edx_brand_primary_base"
                            android:textSize="11sp"
                            android:text="@string/personal_policy" />

                        <TextView
                            android:id="@+id/version_env_tv"
                            style="@style/regular_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center_horizontal"
                            android:text=""
                            android:textColor="@color/transparent_black_80"
                            android:textSize="10sp"
                            android:visibility="invisible" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>
